deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: titanic-deployment
  labels:
    app: titanic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: titanic
  template:
    metadata:
      labels:
        app: titanic
    spec:
      containers:
        - name: api
1          image: meilametayebjee/application-correction:v4.0.0
          imagePullPolicy: Always
2              value: https://user-meilametayebjee-mlflow.user.lab.sspcloud.fr
            - name: MLFLOW_MODEL_NAME
              value: titanic
            - name: MLFLOW_MODEL_VERSION
              value: "1"
          resources:
            limits:
              memory: "2Gi"
              cpu: "1000m"
